fix user header spacing

--- a/app/assets/stylesheets/user_header.scss
+++ b/app/assets/stylesheets/user_header.scss
@@ -43,10 +43,10 @@ $open-sans: 'Open Sans', sans-serif;
 }
 
 .user-header {
-  width: 100%;
-  min-width: 800px;
-  position: relative;
+  display: flex;
+  justify-content: flex-start;
   margin: 0 auto;
+  width: 100%;
   height: 100%;
 }
 
@@ -55,7 +55,7 @@ $open-sans: 'Open Sans', sans-serif;
   height: 146px;
   position: absolute;
   top: 16px;
-  left: 0;
+  left: 12px;
   border: 1px solid $highlight-gray;
   border-radius: 25px;
   background-color: rgb(250, 250, 250);
@@ -63,37 +63,18 @@ $open-sans: 'Open Sans', sans-serif;
   box-shadow: 0 0 0 16px white;
 }
 
-.dummy-avatar-container {
-  width: 200px;
-  height: 178px;
-  position: absolute;
-  top: 0;
-  left: -16px;
-  border: 1px solid white;
-  background-color: white;
-  border-radius: 37px;
-  z-index: -1;
-  box-shadow: 2px 2px 6px $middle-gray;
-}
-
-.user-avatar {
-
-}
-
 .user-details-container {
-  float: left;
   height: 100%;
-  width: 260px;
-  margin-left: 200px;
-  white-space: nowrap;
+  margin-left: 180px;
+  width: 300px;
 }
 
 .user-details {
-  position: relative;
-  margin: 10px;
-  height: 100px;
+  padding: 10px;
+  height: 100%;
+  width: 100%;
+  min-width: 200px;
   color: $dark-gray;
-  border-right: 1px solid $light-gray;
 }
 
 .user-details h3 {
@@ -117,7 +98,7 @@ $open-sans: 'Open Sans', sans-serif;
 
 .user-star-rating {
   position: absolute;
-  bottom: 0;
+  bottom: 10px;
   height: 30px;
   width: 200px;
   line-height: 30px;
@@ -137,10 +118,8 @@ $open-sans: 'Open Sans', sans-serif;
 }
 
 .user-blurb-container {
-  float: left;
-  left: 500px;
+  padding: 10px;
   height: 100%;
-  width: 320px;
 }
 
 .user-blurb h4 {
@@ -151,9 +130,11 @@ $open-sans: 'Open Sans', sans-serif;
 }
 
 .user-blurb {
-  margin: 10px;
+  padding-left: 20px;
+  min-width: 240px;
+  border-left: 1px solid $light-gray;
   height: 100px;
-  position: relative;
+  height: 100%;
   color: $gray;
   font-weight: 400;
 }
